--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -129,7 +129,7 @@ section {
 .rider-img {
     position:absolute;
     right: 0;
-    top: 830px;
+    top: 800px;
     padding-right: 70px;
 }
 
@@ -213,6 +213,7 @@ section {
     color: #141619;
     letter-spacing: 1px;
     margin-top: 30px;
+    ms-transform: translateY(120%);
 }
 
 .footer-content-up p {
