--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -132,6 +132,12 @@ section {
     top: 800px;
     padding-right: 70px;
 }
+.merchantsts-img img {
+    position: absolute;
+    top: 650px;
+    right: 0;
+    padding-right:70px ;
+}
 
 .cta-group {
     width: 230px;
@@ -213,7 +219,6 @@ section {
     color: #141619;
     letter-spacing: 1px;
     margin-top: 30px;
-    ms-transform: translateY(120%);
 }
 
 .footer-content-up p {
